--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,15 +8,19 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" android:label="First Activity">
+        <activity
+            android:name=".MainActivity"
+            android:label="First Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".ActivitySecond" android:label="Second Activity"></activity>
+        <activity
+            android:name=".ActivitySecond"
+            android:label="Second Activity" />
+        <activity android:name=".ActivityThird"></activity>
     </application>
 
 </manifest>
